--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -26,7 +26,7 @@ $main-font-family: Tahoma, Geneva, sans-serif;
 $lang-li-width: 80px; //width 'li' block in 'lang'
 $lang-main-width: 570px; //width main lang block
 $login-width: 100px;
-$sidebar-width: 175px;
+$sidebar-width: 174px; //width img of right sidebar
 $wrap-width: 902px;
 //Other
 $top-padding: 28px; //for login and contacts
